Fix java 21 build (#14)
* Add tests with record

* #12: Add support for records

* Upgrade junit

* Add changelog entry

* Verify class has properties to compare

* Fix build for Java 21

* Update formatter config

* Update java version in eclipse config

* Cleanup project setup

* Allow building with higher Java versions

* Update version to 0.8.0

---------

Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>